--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Key Detection</title>
+  <title>Key Detection 👀Easter Egg</title>
   <script type="text/javascript" src="https://www.cornify.com/js/cornify.js"></script>
 </head>
 <body>
+  <h1>Please try to type a word "limu"</h1>
 <script>
   const pressed = [];
   const secretCode = 'limu';
